# UPlatform

./: CMakeLists.txt  UPlatform.hpp  source.cpp
Common/: Event.cpp  Event.hpp  EventData.cpp  EventData.hpp  EventQueue.cpp  EventQueue.hpp  EventType.hpp  Window.hpp  WindowDesc.cpp  WindowDesc.hpp
Linux/: Linux_Window.cpp
Windows/: Windows_Window.cpp  Windows_Window.hpp
